--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cordova-plugin-media",
-  "version": "4.0.1-dev",
+  "name": "cordova-plugin-media-ka",
+  "version": "1.0.0",
   "description": "Cordova Media Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
