--- a/plugin.xml
+++ b/plugin.xml
@@ -20,8 +20,8 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-media"
-    version="5.0.4-dev">
+    id="cordova-plugin-media-ka"
+    version="5.0.4">
 
     <name>Media</name>
     <description>Cordova Media Plugin</description>
